fixed ranodm colon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>My test page</title>
   </head>
   <body>
-    <<h1>I dont know what I'm doing</h1>
+    <h1>I dont know what I'm doing</h1>
   </body>
-</html> 
+</html>
