added images and line breaks

--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>My test page</title>
+
   </head>
   <body>
     <h1>I dont know what I'm doing</h1>
+    <p>so like yea that happened yikerzz</p> <br>
+    <p>lordy help ma soul</p> <br>
+    <img src="images/hornet.jpg" alt="sad hornet ya'll horny..">
   </body>
 </html>
