--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <body>
     <h1>I dont know what I'm doing</h1>
     <p>so like yea that happened yikerzz</p> <br>
+    <img src="images/hornet.jpg" alt="hornet: ya'll so horny..">
     <p>lordy help ma soul</p> <br>
-    <img src="images/hornet.jpg" alt="sad hornet ya'll horny..">
+    <button name="button">Press F to pay respects</button>
   </body>
 </html>
