--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>My test page</title>
-
+    <link href="styles/style.css" rel="stylesheet">
   </head>
   <body>
     <h1>I dont know what I'm doing</h1>
