--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   </head>
   <body>
     <h1>I dont know what I'm doing</h1>
-    <p>so like yea that happened yikerzz</p> <br>
     <img src="images/hornet.jpg" alt="hornet: ya'll so horny..">
-    <p>lordy help ma soul</p> <br>
-    <button name="button">Press F to pay respects</button>
+    <p>I honestly still think I'm retarded and have been blasting:<a href="https://open.spotify.com/playlist/71a4WyaSNXbOGUgFQr3qSo?si=E9HMyiKGTnGVst5gOvQRhw">Asshole music</a> the whole time i was writing this</p>
+     <p>so like yea that happened yikerzz</p> <br>
+    <button name="button"><strong>Press F to pay respects</strong></button>
   </body>
 </html>
