attempted to add scroll bar(failed/wip) and web txt

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <h1>I dont know what I'm doing</h1>
     <img src="images/hornet.jpg" alt="hornet: ya'll so horny..">
     <p>I honestly still think I'm retarded and have been blasting:<a href="https://open.spotify.com/playlist/71a4WyaSNXbOGUgFQr3qSo?si=E9HMyiKGTnGVst5gOvQRhw">Asshole music</a> the whole time i was writing this</p>
-     <p>so like yea that happened yikerzz</p> <br>
+     <p>God I feel so tired it's 4am in the morning and my tinnitus is getting worse.</p> <br>
+     <p>Damn...what am i doing here? </p>
     <button name="button"><strong>Press F to pay respects</strong></button>
   </body>
 </html>
