--- a/index.html
+++ b/index.html
@@ -1,24 +1,36 @@
 <!DOCTYPE html>
 <html>
   <head>
+
+
+
     <meta charset="utf-8">
     <title>My test page</title>
     <link href="styles/style.css" rel="stylesheet">
+
   </head>
+
   <body>
-    <h1>I dont know what I'm doing</h1>
+    <h1>About/Log</h1>
     <img src="images/hornet.jpg" alt="hornet: ya'll so horny..">
-    <p>I honestly still think I'm retarded and have been blasting:<a href="https://open.spotify.com/playlist/71a4WyaSNXbOGUgFQr3qSo?si=E9HMyiKGTnGVst5gOvQRhw">Asshole music</a> the whole time I was writing this</p>
+    <p>Absolutely retarded and have been blasting:<a href="https://open.spotify.com/playlist/71a4WyaSNXbOGUgFQr3qSo?si=E9HMyiKGTnGVst5gOvQRhw">Asshole music</a> the whole time I was writing this.</p>
      <p>God I feel so tired it's 4am in the morning and my tinnitus is getting worse.</p> <br>
      <p>Damn...what am I doing here? </p>
     <button onclick="myFunction()"><strong>Press F to pay respects</strong></button>
     <p id="demo"></p>
     <script>
 function myFunction() {
-  document.getElementById("demo").innerHTML = <em>"thot";</em>
+  document.getElementById("demo").innerHTML = "Friday, July 3";
 }
 </script>
 
     <h2><strong> <u>Journal 1</u></strong></h2><br>
+    <p2> Technically already starting on this log since past 12am, but technically it counts as the next day. :/ Things have been pretty aight these days and this website right here kinda makes me happy. Hopefully
+    over time I'll be able to turn this into something more and have something to look back at further along my path of coding. Right now it's still quite difficult to grasp new concepts and commands. The idea of git is starting
+  to become clearer and getting used to commiting and pushing to a remote repository has been slightly irritating. I will begin another related course to html languages and more with a required 300 hours for the whole thing
+and projects. q-q Commitment will haunt me like a bitch with this one but I think im determined enough this time(then again I said the same thing with art). Anyways I should probably head to sleep for a bit and continue this later...</p2><br>
+
+<p3> <strong> <---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------></strong></p3> <br>
+
   </body>
 </html>
