--- a/index.html
+++ b/index.html
@@ -25,12 +25,19 @@ function myFunction() {
 </script>
 
     <h2><strong> <u>Journal 1</u></strong></h2><br>
+    <main>
+
+
     <p2> Technically already starting on this log since past 12am, but technically it counts as the next day. :/ Things have been pretty aight these days and this website right here kinda makes me happy. Hopefully
     over time I'll be able to turn this into something more and have something to look back at further along my path of coding. Right now it's still quite difficult to grasp new concepts and commands. The idea of git is starting
   to become clearer and getting used to commiting and pushing to a remote repository has been slightly irritating. I will begin another related course to html languages and more with a required 300 hours for the whole thing
 and projects. q-q Commitment will haunt me like a bitch with this one but I think im determined enough this time(then again I said the same thing with art). Anyways I should probably head to sleep for a bit and continue this later...</p2><br>
 
-<p3> <strong> <---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------></strong></p3> <br>
+<h5><strong> <-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------></strong></h5> <br>
 
+<p2>Ok it is currently 1pm as I write this so damn I woke up pretty late huh? xd For the rest of this day there wont be much besides me beggining a 300 plus hour course for html etc. Im lowkey exited and don't want to ever lose hope or give up.
+this will be my future career and I've already invested too much time to change my mind again. I love art but i just dont think I hold the creativity and skill to hold a future there. Plus an art career is well known to be very hard to get an actual job.
+I think the idea of working a job with a constantly growing field with flexible hours is perfect for someone like me. I don't want things to be too easy and like a good challenge plus the ability to work when I'm most productive. Hope I succeed!</p2>
+</main>
   </body>
 </html>
