added image border and radius curve and font change

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <body>
     <h1>About/Log</h1>
-    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" ><img src="images/hornet.jpg" alt="hornet: ya'll so horny.."></a>
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" ><img class="med-red-border" src="images/hornet.jpg" alt="hornet: ya'll so horny.."></a>
     <p>Absolutely retarded and have been blasting:<a href="https://open.spotify.com/playlist/71a4WyaSNXbOGUgFQr3qSo?si=E9HMyiKGTnGVst5gOvQRhw">Asshole music</a> the whole time I was writing this.</p>
      <p>God I feel so tired it's 4am in the morning and my tinnitus is getting worse.</p> <br>
      <p>Damn...what am I doing here? </p>
@@ -26,8 +26,8 @@ function myFunction() {
 
     <h2><strong> <u>Journal 1</u></strong></h2><br>
     <main>
-
-
+<!-- <input type="text"> (for text box lol) -->
+<!-- can add place holder text by putting placeholder= "" after input type-->
     <p2> Technically already starting on this log since past 12am, but technically it counts as the next day. :/ Things have been pretty aight these days and this website right here kinda makes me happy. Hopefully
     over time I'll be able to turn this into something more and have something to look back at further along my path of coding. Right now it's still quite difficult to grasp new concepts and commands. The idea of git is starting
   to become clearer and getting used to commiting and pushing to a remote repository has been slightly irritating. I will begin another related course to html languages and more with a required 300 hours for the whole thing
