--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 
     <meta charset="utf-8">
-    <title>Fei's blogs</title>
+    <title>Fei's blog</title>
     <link href="styles/style.css" rel="stylesheet">
 
   </head>
