--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <body>
 
     <h1>About/Log</h1>
-    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" ><img class="med-red-border" src="images/hornet.jpg" alt="hornet: ya'll so horny.."></a>
-    <p>Absolutely retarded and have been blasting:<a href="https://open.spotify.com/playlist/71a4WyaSNXbOGUgFQr3qSo?si=E9HMyiKGTnGVst5gOvQRhw">Asshole music</a> the whole time I was writing this.</p>
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" ><img class="med-red-border" src="https://i.imgur.com/ZAEHRzE.png" alt="idk"> 
+    <p>ave been blHasting:<a href="https://open.spotify.com/playlist/71a4WyaSNXbOGUgFQr3qSo?si=E9HMyiKGTnGVst5gOvQRhw">Asshole music</a> the whole time I was writing this.</p>
      <p>God I feel so tired it's 4am in the morning and my tinnitus is getting worse.</p> <br>
      <p>Damn...what am I doing here? </p>
 
